# python-api-boilerplate

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
docker/: app.Dockerfile  base.Dockerfile  dev.Dockerfile  version.sh
python_api_boilerplate/: api.py
tests/: test_api.py
