[tool.poetry]
name = "python-api-boilerplate"
version = "0.1.0"
description = ""
authors = ["mehd-io <mehdi@mehd.io>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
loguru = "^0.5.3"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.10b0"
isort = "^5.10.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "test/*.py"]

[tool.black]
line-length = 90

[tool.isort]
line_length = 90
profile = "black"